--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,10 @@ pytz==2023.3.post1
 six==1.16.0
 sniffio==1.3.0
 sqlparse==0.4.4
+Django==3.2.7
+djongo==1.3.3
+gunicorn==20.1.0
+psycopg2-binary==2.9.1
 starlette==0.32.0.post1
 typing_extensions==4.9.0
 tzdata==2023.3
